k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-mcp-server
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-mcp-server
  template:
    metadata:
      labels:
        app: db-mcp-server
    spec:
      serviceAccountName: mcp-server-sa # This is the name of the service account used in vault
      containers:
        - name: db-mcp-server
          image: 13rottenbanana/db-mcp-server:latest 
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
