k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-mcp-server-service
  namespace: test

spec:
  selector:
    app: db-mcp-server

  type: ClusterIP
  
  ports:
    - port: 3000
      targetPort: 3000
