k8s/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: db-mcp-server-route
  namespace: test
spec:
  parentRefs:
  - name: application-gateway
    namespace: envoy-gateway-system
  hostnames:
  - "db-mcp-server.local"
  rules:
  - backendRefs:
    - name: db-mcp-server-service
      port: 3000
